# PitacoFC

./: .dockerignore  .gitignore  Dockerfile.bot  Dockerfile.fastapi  docker-compose.yml  greetings.js  index.cjs  package-lock.json  package.json  requirements.txt  tips_sobre_bot.cjs  utils.cjs  utils.js
brasileirao_agent/: README.md  pyproject.toml  report.md
brasileirao_agent/src/brasileirao_agent/: crew.py  main.py
brasileirao_agent/src/brasileirao_agent/config/: agents.yaml  tasks.yaml
brasileirao_agent/src/brasileirao_agent/tools/: club_info_tool.py  current_round_insight_tool.py  jogos_tool.py  player_overall_tool.py  playerstats_tool.py  round_insights_tool.py  tabela_tool.py  team_overall_tool.py
fastapi_server/: brasileirao_connector.py  celery_app.py  intencao_llm.py  main.py  tasks.py  thread_manager.py
