[project]
name = "brasileirao_agent"
version = "0.1.0"
description = "brasileirao_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
brasileirao_agent = "brasileirao_agent.main:run"
run_crew = "brasileirao_agent.main:run"
train = "brasileirao_agent.main:train"
replay = "brasileirao_agent.main:replay"
test = "brasileirao_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
